--- a/index.html
+++ b/index.html
@@ -338,6 +338,7 @@
       <a href="#" class="banner" onclick="openGame('Color Catch.html')">Color Catch</a>
       <a href="#" class="banner" onclick="openGame('Bubble_Pop.html')">Bubble Pop</a>
       <a href="#" class="banner" onclick="openGame('Pixel Runner.html')">Pixel Runner</a>
+      <a href="#" class="banner" onclick="openGame('Tetris.html')">Tetris</a>
     </div>
 
     <!-- Pagination -->
