--- a/Dodger.html
+++ b/Dodger.html
@@ -30,15 +30,54 @@
     font-size: 24px;
     color: #000;
   }
+
+  .overlay {
+    position: fixed;
+    inset: 0;
+    display: grid;
+    place-items: center;
+    text-align: center;
+    font-size: 24px;
+    color: #000;
+    pointer-events: none;
+    z-index: 3;
+    opacity: 0;
+    transform: scale(0.95);
+    transition: opacity 0.3s ease, transform 0.3s ease;
+    background: rgba(255, 255, 255, 0.95);
+    backdrop-filter: blur(4px);
+  }
+  
+  .overlay.show {
+    opacity: 1;
+    transform: scale(1);
+  }
+  
+  .overlay > div {
+    animation: slideUp 0.5s ease;
+  }
+  
+  @keyframes slideUp {
+    from {
+      opacity: 0;
+      transform: translateY(20px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
 </style>
 </head>
 <body>
 <div id="score">Score: 0</div>
 <canvas id="gameCanvas" width="400" height="600"></canvas>
+<div class="overlay" id="overlay"></div>
 
 <script>
   const canvas = document.getElementById('gameCanvas');
   const ctx = canvas.getContext('2d');
+  const overlay = document.getElementById('overlay');
 
   const player = { 
     x: 180, 
@@ -61,6 +100,7 @@
   const blocks = [];
   let score = 0;
   let gameOver = false;
+  let gameStarted = false;
   let gameOverAnimation = 0;
   let screenShake = 0;
   let speedIncreaseShake = 0;
@@ -101,6 +141,13 @@
     oscillator.stop(audioContext.currentTime + duration);
   }
 
+  function startGame() {
+    gameStarted = true;
+    gameOver = false;
+    overlay.classList.remove('show');
+    resetGame();
+  }
+
   function resetGame() {
     blocks.length = 0;
     particles.length = 0;
@@ -132,10 +179,17 @@
   // Controls
   const keys = {};
   document.addEventListener('keydown', e => {
+    if (!gameStarted && !gameOver) {
+      if (e.code === 'Space') {
+        startGame();
+      }
+      return;
+    }
+    
     keys[e.key] = true;
     if (e.key === 'r' || e.key === 'R') {
       if (gameOver) {
-        resetGame();
+        startGame();
       }
     }
   });
@@ -144,8 +198,8 @@
   function spawnBlock() {
     const size = Math.random() * 30 + 20;
     const x = Math.random() * (canvas.width - size);
-    // Calculate speed multiplier based on score (every 30 points = +1 speed)
-    const speedMultiplier = 1 + Math.floor(score / 30) * 0.5;
+    // Calculate speed multiplier based on score (every 15 points = +0.5 speed)
+    const speedMultiplier = 1 + Math.floor(score / 15) * 0.5;
     blocks.push({ 
       x, 
       y: -size, 
@@ -180,6 +234,8 @@
   }
 
   function update() {
+    if (!gameStarted) return;
+    
     if (gameOver) {
       gameOverAnimation += 0.05;
       if (screenShake > 0) screenShake -= 0.5;
@@ -562,11 +618,15 @@
 
   gameLoop();
 
+  // Show start screen
+  overlay.innerHTML = '<div><div style="font-weight:700;font-size:26px">Dodge the Blocks</div><div style="opacity:0.8;margin-top:10px;font-size:16px">Use arrow keys or WASD to dodge</div><div style="opacity:0.7;margin-top:12px;font-size:14px">Press Space to start</div></div>';
+  overlay.classList.add('show');
+
   // Dynamic spawn scheduling with 50% base faster spawn
   // and extra 10% faster from Level 2 (>=15 points)
   let spawnDelay = 500;
   function scheduleSpawn() {
-    if (!gameOver) spawnBlock();
+    if (!gameOver && gameStarted) spawnBlock();
     let level = Math.floor(score / 15);
     let baseDelay = 500 - level * 50;
     if (level >= 1) baseDelay *= 0.9; // 10% faster at level 2+
@@ -574,39 +634,6 @@
     setTimeout(scheduleSpawn, spawnDelay);
   }
   scheduleSpawn();
-
-  // Modify spawnBlock speed scaling every 15 points
-  const _originalSpawnBlock = spawnBlock;
-  spawnBlock = function(){
-    const size = Math.random() * 30 + 20;
-    const x = Math.random() * (canvas.width - size);
-    const speedMultiplier = 1 + Math.floor(score / 15) * 0.5;
-    blocks.push({
-      x, y: -size, width: size, height: size,
-      speed: (Math.random() * 3 + 2) * speedMultiplier,
-      rotation: 0,
-      rotationSpeed: (Math.random() - 0.5) * 0.1,
-      color: softColors[Math.floor(Math.random() * softColors.length)],
-      scale: 0,
-      targetScale: 1,
-      wobble: 0,
-      pulse: Math.random() * Math.PI * 2,
-      sparkles: []
-    });
-    for (let i = 0; i < 8; i++) {
-      particles.push({
-        x: x + size/2,
-        y: -size/2,
-        vx: (Math.random() - 0.5) * 4,
-        vy: (Math.random() - 0.5) * 4,
-        life: 1,
-        maxLife: 1,
-        size: Math.random() * 3 + 1,
-        color: softColors[Math.floor(Math.random() * softColors.length)]
-      });
-    }
-    playSound(200, 0.05, 'square');
-  };
 
 </script>
 </body>
