--- a/Snake Lite.html
+++ b/Snake Lite.html
@@ -2,10 +2,10 @@
 <html lang="en"><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <meta charset="UTF-8">
-  <title>Snake Lite Subtle + Sounds (Arcade) — Red Death</title>
+  <title>Snake Lite</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
-    body { margin: 0; background: #ffffff; display: grid; place-items: center; height:100vh; }
+    body { margin: 0; background: #ffffff; display: grid; place-items: center; height:100vh; font-family: ui-monospace, Menlo, Consolas, monospace; }
     canvas { image-rendering: pixelated; background: #ffffff; display: block; border: 3px solid #000; }
     .hud {
       position: fixed; top: 10px; left: 10px;
@@ -16,20 +16,30 @@
       font: 13px monospace; color:#000;
     }
     .overlay {
-      position: fixed; inset: 0; display: grid; place-items: center;
-      font: 28px monospace; color:#000; text-align: center;
-      opacity:0; transform: scale(0.9); transition: all 0.35s ease;
-      pointer-events: none;
+      position: fixed; inset: 0; display: grid; place-items: center; text-align: center;
+      font-size: 24px; color: #000;
+      pointer-events: none; z-index: 3;
+      opacity: 0; transform: scale(0.95); transition: opacity 0.3s ease, transform 0.3s ease;
+      background: rgba(255,255,255,0.95);
+      backdrop-filter: blur(4px);
     }
-    .overlay.show { opacity:1; transform: scale(1); }
+    .overlay.show { opacity: 1; transform: scale(1); }
+    .overlay > div { animation: slideUp 0.5s ease; }
+    @keyframes slideUp { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
   </style>
 </head>
 <body>
   <div class="hud">
-    Score: <span id="score">1</span> | High: <span id="high">3</span>
+    Score: <span id="score">0</span> | High: <span id="high">0</span>
   </div>
   <div class="hint">Press R to reset</div>
-  <div class="overlay show" id="overlay">GAME OVER — Score: 1</div>
+  <div class="overlay show" id="overlay">
+    <div>
+      <div style="font-weight:700;font-size:26px">Snake Lite</div>
+      <div style="opacity:0.8;margin-top:10px;font-size:16px">Eat fruit and grow longer</div>
+      <div style="opacity:0.7;margin-top:12px;font-size:14px">Press Space to start</div>
+    </div>
+  </div>
   <canvas id="game" width="480" height="480"></canvas>
 
   <script>
@@ -70,6 +80,7 @@
     highEl.textContent = high;
     let effect = null, effectTimer = 0;
     let stepCounter = 0;
+    let gameStarted = false;
 
     function rndInt(n) { return Math.floor(Math.random() * n); }
 
@@ -87,6 +98,7 @@
       placeFruit();
       scoreEl.textContent = score;
       overlay.classList.remove('show');
+      gameStarted = true;
       lastTime = performance.now();
       requestAnimationFrame(loop);
     }
@@ -127,7 +139,7 @@
 
     function draw(alpha, t) {
       if (!alive) {
-        ctx.fillStyle = DEAD_BG; // whole board red on death
+        ctx.fillStyle = DEAD_BG;
         ctx.fillRect(0, 0, canvas.width, canvas.height);
         return;
       }
@@ -135,7 +147,7 @@
       ctx.fillStyle = BG;
       ctx.fillRect(0, 0, canvas.width, canvas.height);
 
-      fruit.type.draw(fruit.x*SIZE+SIZE/2, fruit.y*SIZE+SIZE/2, t);
+      if (fruit) fruit.type.draw(fruit.x*SIZE+SIZE/2, fruit.y*SIZE+SIZE/2, t);
 
       ctx.fillStyle = FG;
       for (let i=0; i<snake.length; i++) {
@@ -153,25 +165,38 @@
       if(effect){ ctx.fillStyle='black'; ctx.font='14px monospace'; ctx.fillText(effect.toUpperCase(), canvas.width-80,20); }
     }
 
-    addEventListener('keydown', (e)=>{ ensureAudio();
-      switch(e.key){
-        case 'ArrowUp': case 'w': case 'W': nextDir={x:0,y:-1}; break;
-        case 'ArrowDown': case 's': case 'S': nextDir={x:0,y:1}; break;
-        case 'ArrowLeft': case 'a': case 'A': nextDir={x:-1,y:0}; break;
-        case 'ArrowRight': case 'd': case 'D': nextDir={x:1,y:0}; break;
-        case 'r': case 'R': if (!alive) newGame(); break;
+    addEventListener('keydown', (e)=>{ 
+      ensureAudio();
+      
+      // Start game on space
+      if (e.code === 'Space' && !gameStarted) {
+        newGame();
+        return;
+      }
+      
+      // Game controls
+      if (gameStarted) {
+        switch(e.key){
+          case 'ArrowUp': case 'w': case 'W': nextDir={x:0,y:-1}; break;
+          case 'ArrowDown': case 's': case 'S': nextDir={x:0,y:1}; break;
+          case 'ArrowLeft': case 'a': case 'A': nextDir={x:-1,y:0}; break;
+          case 'ArrowRight': case 'd': case 'D': nextDir={x:1,y:0}; break;
+          case 'r': case 'R': if (!alive) { gameStarted = false; newGame(); } break;
+        }
       }
     }, {passive:true});
 
     function gameOver(){
       SFX.gameover();
       alive=false;
-      overlay.textContent=`GAME OVER — Score: ${score}`;
+      overlay.innerHTML = `<div><div style="font-weight:800;font-size:28px">GAME OVER</div><div style="margin-top:12px;font-size:18px">Score: ${score}</div><div style="margin-top:4px;font-size:16px">High: ${high}</div><div style="opacity:0.85;margin-top:16px;font-size:14px">Press R to restart</div></div>`;
       overlay.classList.add('show');
     }
 
-    newGame();
+    // Initial setup
+    const cx = Math.floor(COLS/2), cy = Math.floor(ROWS/2);
+    snake = [{x: cx, y: cy}, {x: cx-1, y: cy}];
+    ctx.fillStyle = BG;
+    ctx.fillRect(0, 0, canvas.width, canvas.height);
   </script>
-
-
-<script src="Snake%20Lite%20Subtle%20+%20Sounds%20(Arcade)%20%E2%80%94%20Red%20Death_files/app.js" type="text/javascript"></script></body></html>
+</body></html>
