--- a/Bubble_Pop.html
+++ b/Bubble_Pop.html
@@ -3,16 +3,24 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Bubble Pop — Pastel Arcade</title>
+<title>Bubble Pop – Pastel Arcade</title>
 <style>
   :root{--bg:#fff;--fg:#000}
-  html,body{height:100%;margin:0;background:var(--bg);color:var(--fg);font-family:system-ui,-apple-system,Segoe UI,Roboto,'Helvetica Neue',Arial}
+  html,body{height:100%;margin:0;background:var(--bg);color:var(--fg);font-family:ui-monospace,Menlo,Consolas,monospace}
   .wrap{height:100%;display:flex;align-items:center;justify-content:center}
   canvas{background:var(--bg);border:4px solid var(--fg);box-shadow:0 12px 30px rgba(0,0,0,0.08);display:block}
   #hud{position:fixed;right:18px;top:16px;font-weight:700;text-align:right;font-size:14px}
   #hint{position:fixed;right:18px;bottom:14px;font-size:13px;opacity:0.75;text-align:right}
-  #center{position:fixed;left:50%;top:50%;transform:translate(-50%,-50%);text-align:center}
-  .btn{display:inline-block;margin-top:12px;padding:8px 12px;border:2px solid var(--fg);cursor:pointer}
+  .overlay{
+    position:fixed;inset:0;display:grid;place-items:center;text-align:center;
+    font-size:24px;color:var(--fg);pointer-events:none;z-index:3;
+    opacity:0;transform:scale(0.95);transition:opacity .3s ease,transform .3s ease;
+    background:rgba(255,255,255,0.95);
+    backdrop-filter:blur(4px);
+  }
+  .overlay.show{opacity:1;transform:scale(1);}
+  .overlay>div{animation:slideUp 0.5s ease;}
+  @keyframes slideUp{from{opacity:0;transform:translateY(20px);}to{opacity:1;transform:translateY(0);}}
   @media (max-width:600px){canvas{width:360px;height:600px}}
 </style>
 </head>
@@ -22,17 +30,23 @@
   <div class="wrap">
     <canvas id="c" width="420" height="600" aria-label="Bubble Pop pastel arcade"></canvas>
   </div>
-  <div id="center"></div>
+  <div class="overlay show" id="overlay">
+    <div>
+      <div style="font-weight:700;font-size:26px">Bubble Pop</div>
+      <div style="opacity:0.8;margin-top:10px;font-size:16px">Pop bubbles, avoid bombs</div>
+      <div style="opacity:0.7;margin-top:12px;font-size:14px">Press Space to start</div>
+    </div>
+  </div>
 
 <script>
-// Bubble Pop — pastel arcade
+// Bubble Pop – pastel arcade
 const canvas = document.getElementById('c');
 const ctx = canvas.getContext('2d');
 const W = canvas.width, H = canvas.height;
 const scoreEl = document.getElementById('score');
 const livesEl = document.getElementById('lives');
 const bestEl = document.getElementById('best');
-const center = document.getElementById('center');
+const overlay = document.getElementById('overlay');
 
 // Pastel colors for bubbles
 const pastelColors = ['#FFB6C1', '#E6E6FA', '#98FB98', '#F0E68C', '#FFA07A', '#87CEEB', '#DDA0DD', '#F5DEB3', '#90EE90', '#FFE4E1'];
@@ -62,6 +76,7 @@ let state = {
   best: +localStorage.getItem('bubble_pop_best') || 0,
   running: false,
   gameOver: false,
+  firstStart: true,
   screenShake: 0,
   spawnTimer: 0,
   spawnDelay: 2000,
@@ -75,15 +90,30 @@ livesEl.textContent = state.lives;
 // input
 const keys = {};
 window.addEventListener('keydown', e=>{ 
-  keys[e.key]=true; 
-  if(e.key===' ' && !state.running && !state.gameOver) start(); 
-  if(e.key==='r'||e.key==='R') reset();
+  keys[e.key]=true;
+  if(e.key===' '){
+    if(state.firstStart && !state.running){
+      start();
+    } else if(state.gameOver){
+      reset();
+      start();
+    } else if(!state.running && !state.gameOver){
+      start();
+    }
+  }
+  if(e.key==='r'||e.key==='R'){
+    if(state.gameOver){
+      reset();
+      start();
+    }
+  }
 });
 window.addEventListener('keyup', e=> keys[e.key]=false);
 
 function start(){ 
-  state.running = true; 
-  center.innerHTML='';
+  state.running = true;
+  state.firstStart = false;
+  overlay.classList.remove('show');
   spawnBubble();
 }
 
@@ -106,7 +136,6 @@ function reset(){
   state.gameTime = 0;
   scoreEl.textContent = '0';
   livesEl.textContent = '3'; 
-  center.innerHTML = '<div style="font-weight:700;font-size:20px">Bubble Pop</div><div style="opacity:0.8;margin-top:8px">Pop bubbles by colliding into them!</div><div style="opacity:0.6;margin-top:6px">Press Space to start</div>'; 
 }
 
 function spawnBubble(){
@@ -214,7 +243,8 @@ function update(dt){
         state.lives--; livesEl.textContent=state.lives;
         if(state.lives<=0){
           state.gameOver=true;
-          center.innerHTML='<div style="font-weight:700;font-size:20px">Game Over</div><div style="opacity:0.8;margin-top:8px">Press R to restart</div>';
+          overlay.innerHTML='<div><div style="font-weight:800;font-size:28px">GAME OVER</div><div style="margin-top:12px;font-size:18px">Score: '+state.score+'</div><div style="margin-top:4px;font-size:16px">Best: '+state.best+'</div><div style="opacity:0.85;margin-top:16px;font-size:14px">Press R to restart</div></div>';
+          overlay.classList.add('show');
         }
       } else {
         state.score++; scoreEl.textContent=state.score;
@@ -261,8 +291,7 @@ function draw(){
 
 let last=performance.now();
 function loop(t){const dt=t-last; last=t; update(dt); draw(); requestAnimationFrame(loop);}
-center.innerHTML='<div style="font-weight:700;font-size:20px">Bubble Pop</div><div style="opacity:0.8;margin-top:8px">Pop bubbles by colliding into them!</div><div style="opacity:0.6;margin-top:6px">Press Space to start</div>';
-reset(); requestAnimationFrame(loop);
+requestAnimationFrame(loop);
 </script>
 </body>
 </html>
