--- a/Color Catch.html
+++ b/Color Catch.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<!-- saved from url=(0066)file:///C:/Users/cynthia/Downloads/Color_Catch_no_shake_wrong.html -->
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
+<html lang="en">
+<head>
+<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Color Catch — Pastel Arcade</title>
+<title>Color Catch – Pastel Arcade</title>
 <style>
   :root{--bg:#fff;--fg:#000}
   html,body{height:100%;margin:0;background:var(--bg);color:var(--fg);font-family:system-ui,-apple-system,Segoe UI,Roboto,'Helvetica Neue',Arial}
@@ -11,27 +11,36 @@
   canvas{background:var(--bg);border:4px solid var(--fg);box-shadow:0 12px 30px rgba(0,0,0,0.08);display:block}
   #hud{position:fixed;left:18px;top:16px;font-weight:400}
   #hint{position:fixed;right:18px;top:14px;font-size:13px;opacity:0.75}
-  #center{position:fixed;left:50%;top:50%;transform:translate(-50%,-50%);text-align:center}
-  .btn{display:inline-block;margin-top:12px;padding:8px 12px;border:2px solid var(--fg);cursor:pointer}
+  .overlay{
+    position:fixed;inset:0;display:grid;place-items:center;text-align:center;
+    font-size:24px;color:var(--fg);pointer-events:none;z-index:3;
+    opacity:0;transform:scale(0.95);transition:opacity .3s ease,transform .3s ease;
+    background:rgba(255,255,255,0.95);
+    backdrop-filter:blur(4px);
+  }
+  .overlay.show{opacity:1;transform:scale(1);}
+  .overlay>div{animation:slideUp 0.5s ease;}
+  @keyframes slideUp{from{opacity:0;transform:translateY(20px);}to{opacity:1;transform:translateY(0);}}
   @media (max-width:600px){canvas{width:360px;height:600px}}
 </style>
 </head>
 <body>
-  <div id="hud">Score: <span id="score">2</span> &nbsp;|&nbsp; Lives: <span id="lives">0</span> &nbsp;|&nbsp; Best: <span id="best">13</span></div>
+  <div id="hud">Score: <span id="score">0</span> &nbsp;|&nbsp; Lives: <span id="lives">5</span> &nbsp;|&nbsp; Best: <span id="best">0</span></div>
   <div id="hint">← → or A D • Space to start • R restart</div>
   <div class="wrap">
     <canvas id="c" width="420" height="600" aria-label="Color Catch pastel arcade"></canvas>
   </div>
-  <div id="center"><div style="font-weight:800;font-size:28px">Game Over</div><div style="margin-top:6px;font-size:18px">Score: 2</div><div style="margin-top:4px;font-size:16px">Best: 13</div><div style="opacity:0.8;margin-top:8px">No lives remaining!</div><div style="opacity:0.85;margin-top:10px">Press R to restart</div></div>
+  <div class="overlay" id="overlay"></div>
+
 <script>
-// Color Catch — pastel arcade
+// Color Catch – pastel arcade
 const canvas = document.getElementById('c');
 const ctx = canvas.getContext('2d');
 const W = canvas.width, H = canvas.height;
 const scoreEl = document.getElementById('score');
 const livesEl = document.getElementById('lives');
 const bestEl = document.getElementById('best');
-const center = document.getElementById('center');
+const overlay = document.getElementById('overlay');
 
 // Pastel colors
 const pastelColors = ['#FFB6C1', '#E6E6FA', '#98FB98', '#F0E68C', '#FFA07A', '#87CEEB', '#DDA0DD', '#F5DEB3', '#90EE90', '#FFE4E1'];
@@ -74,14 +83,15 @@ livesEl.textContent = state.lives;
 const keys = {};
 window.addEventListener('keydown', e=>{ 
   keys[e.key]=true; 
-  if(e.key===' ' && !state.running && !state.gameOver) start(); 
+  if(e.code==='Space' && !state.running && !state.gameOver) start(); 
   if(e.key==='r'||e.key==='R') reset();
 });
 window.addEventListener('keyup', e=> keys[e.key]=false);
 
 function start(){ 
   state.running = true; 
-  center.innerHTML='';
+  state.gameOver = false;
+  overlay.classList.remove('show');
   state.paddle.color = pastelColors[Math.floor(Math.random() * pastelColors.length)];
   spawnObject();
 }
@@ -104,9 +114,9 @@ function reset(){
   state.gameTime = 0;
   scoreEl.textContent = '0';
   livesEl.textContent = '5'; 
-  center.innerHTML = '<div style="font-weight:700;font-size:20px">Color Catch</div><div style="opacity:0.8;margin-top:8px">Catch matching colors with your paddle!</div><div style="opacity:0.6;margin-top:6px">Press Space to start</div>'; 
+  overlay.innerHTML = '<div><div style="font-weight:700;font-size:26px">Color Catch</div><div style="opacity:0.8;margin-top:10px;font-size:16px">Catch matching colors with your paddle!</div><div style="opacity:0.7;margin-top:12px;font-size:14px">Press Space to start</div></div>';
+  overlay.classList.add('show');
 }
-
 
 function spawnObject(){
   if(!state.running) return;
@@ -176,7 +186,6 @@ function spawnObject(){
 
   sfx(300 + Math.random()*200, 0.05, 'triangle', 0.04);
 }
-
 
 function spawnParticles(x, y, color, count=15){
   for(let i=0; i<count; i++){
@@ -320,11 +329,7 @@ function update(dt){
           state.gameOver = true;
           state.running = false;
           state.screenShake = 25; // still shake on final game over
-          center.innerHTML = '<div style="font-weight:800;font-size:28px">Game Over</div>' +
-            '<div style="margin-top:6px;font-size:18px">Score: ' + state.score + '</div>' +
-            '<div style="margin-top:4px;font-size:16px">Best: ' + state.best + '</div>' +
-            '<div style="opacity:0.8;margin-top:8px">No lives remaining!</div>' +
-            '<div style="opacity:0.85;margin-top:10px">Press R to restart</div>';
+          center.innerHTML = '<div style="font-weight:800;font-size:28px">Game Over</div><div style="margin-top:6px;font-size:18px">Score: ' + state.score + '</div><div style="margin-top:4px;font-size:16px">Best: ' + state.best + '</div><div style="opacity:0.8;margin-top:8px">No lives remaining!</div><div style="opacity:0.85;margin-top:10px">Press R to restart</div>';
         }
       }
     }
@@ -332,8 +337,7 @@ function update(dt){
     // Remove objects that fell off screen
     if(obj.y - obj.size > H) {
       state.fallingObjects.splice(index, 1);
-      
-      }
+    }
   });
 
   // Update particles
@@ -429,9 +433,8 @@ function loop(t){
   requestAnimationFrame(loop);
 }
 
-center.innerHTML = '<div style="font-weight:700;font-size:20px">Color Catch</div><div style="opacity:0.8;margin-top:8px">Catch matching colors with your paddle!</div><div style="opacity:0.6;margin-top:6px">Press Space to start</div>';
 reset();
 requestAnimationFrame(loop);
 </script>
-
-</body></html>
+</body>
+</html>
