--- a/index.html
+++ b/index.html
@@ -339,6 +339,8 @@
       <a href="#" class="banner" onclick="openGame('Bubble_Pop.html')">Bubble Pop</a>
       <a href="#" class="banner" onclick="openGame('Pixel Runner.html')">Pixel Runner</a>
       <a href="#" class="banner" onclick="openGame('Tetris.html')">Tetris</a>
+      <a href="#" class="banner" onclick="openGame('Cube Jump.html')">Cube Jump</a>
+      <a href="#" class="banner" onclick="openGame('Tic Tac Toe.html')">Tic Tac Toe</a>
     </div>
 
     <!-- Pagination -->
